--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
 
 
-.padding-100 {
-    padding: 20px 100px;
+h1, h2, h3, h4, h5, h6, p {
+    font-family: 'DM Sans', sans-serif;
 }
+
+
 
 h1 {
-    font-size: 2.5rem;
+    font-size: 4rem;
 }
 
+.bg-light {
+    background-color: #fff !important;
+}
+
+.nav-link {
+    font-size: 1.25rem;
+    font-family: 'Inter', sans-serif;
+}
 
 .gallery {
-    padding: 100px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 100px;
-    grid-row-gap: 100px;
+    grid-template-columns: 1fr;
+    grid-row-gap: 20px;
+
 }
 
-.img-1 {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 2;
+/*  */
+
+@media screen and (min-width: 768px) {
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 20px;
+        grid-row-gap: 20px;
+    }
 }
 
-.img-2 {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 3;
-}
 
-.img-3 {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: -1;
-}
 
 
 .sovrapponi {
@@ -48,10 +51,26 @@ h1 {
 
 /* input */
 .form-control {
+    font-family: 'DM Sans', sans-serif;
     border-radius: 0;
     background-color: #212529;
+    background-color: #000;
     border: none;
     border-bottom: 1px solid #5E737D;
+    /* font-size: 1.5rem; */
+    font-size: 1.9rem;
+    padding-left: 0;
+}
+
+.form-label {
+    font-size: 1.9rem;
+    font-weight: 400;
+}
+
+.form-control:focus {
+    /* font-family: 'DM Sans', sans-serif; */
+    background-color: #000;
+    color: #fff;
 }
 
 button {
@@ -66,6 +85,9 @@ button {
     background-color: yellow;
     color: red;
     border: none;
+    font-size: 1.5rem;
+    font-weight: 800;
+    font-family: 'DM Sans', sans-serif;
 }
 
 .img-bg {
@@ -78,3 +100,35 @@ button {
     left: 0;
 }
 
+.testo-grande {
+    font-size: 3.5rem;
+    font-weight: 600;
+}
+
+.slim {
+    font-weight: 300;
+}
+
+
+.container-overlay {
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+
+
+.bg-dark {
+    background-color: #000 !important;
+}
+
+.copyright {
+    font-size: 1.5rem;
+}
